--- a/mysql-deployement.yml
+++ b/mysql-deployement.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-	name: "mysql-pv-claim" # name of PVC essential for identifying the storage data
+	name: mysqlpvclaim # name of PVC essential for identifying the storage data
 	labels:
 		app: mysql
 		tier: database
@@ -62,7 +62,7 @@ spec:
 			volumes:
 				- name: mysql-persistent-storage # Obtaining 'vloume' from PVC
 				  persistentVolumeClaim:
-					  claimName: mysql-pv-claim
+					  claimName: mysqlpvclaim
 					  ---
 # Define a 'Service' To Expose mysql to Other Services
 apiVersion: v1
